--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Vite">
+  <meta property="og:image" content="https://vitejs.dev/og-image.png">
+  <meta property="og:url" content="https://vitejs.dev">
+  <meta property="og:description" content="Next Generation Frontend Tooling">
+  <title>HealthClinic</title>
+</head>
+<body>
+  <div class="app">
+    <div class="app__Layout">
+      <header class="HCNav">
+        <div class="HCNav__upbar"></div>
+      </header>
+    </div>
+  </div>
+</body>
 </html>
